<resources>
    <string name="app_name">Concentration</string>

    <!-- Page principale -->
    <string name="button_run">Lancer</string>
    <string name="button_resume">Reprendre</string>
    <string name="button_pause">Pause</string>
    <string name="button_give_up">Abandonner</string>
    <string name="button_choose_activity">Choisir une activité</string>

    <!-- Page Mes taches -->
    <string name="option_task_my_task">Mes tâches</string>
    <string name="option_task_my_folder">Mes dossiers</string>
    <string name="option_task_stat_time">Temps passé</string>
    <string name="option_task_stat_accomplish">Tâches accomplies</string>
    <string name="option_task_stat_todo">Tâches restantes</string>
    <string name="name_folder_today">Aujourd\'hui2</string>

    <string name="add_task_title">Nouvelle tâche</string>
    <string name="add_task_name">Nom</string>
    <string name="add_task_description">Description</string>
    <string name="add_task_logo">Logo</string>
    <string name="add_task_number">Tâche</string>
    <string name="add_task_time">Temps de travail</string>
    <string name="add_task_break">Pause</string>


    <string name="repertoire">Mon répertoire</string>
    <string name="tache">Mes tâches</string>
    <string name="temps_passe">Temps passé</string>
    <string name="taches_accomplies">Tâches accomplies</string>
    <string name="taches_restantes">Tâches restantes</string>

    <string name="number_picker_formatter">%2d</string>

</resources>